src/styles/global.css
/* Generales */

:root {


  --color-1: #817266;
  --color-2: #BAA67C;
  --color-3: #7CA097;
  --color-4: #C6D7CF;
  --color-5: #FFFCF8;
  --color-9: #E5E9D0;
  

  --color-6: #A86B1D;
  --color-7: #F7E586;
  --color-8: #E6B64B;


  /* Fuentes */

  --fuente-1:'Parisienne', cursive;
  --fuente-2:'Playfair Display', serif;

  --grosor-fuente-regular: 400;
  --grosor-fuente-bold: 700;

  /* font-family: 'Parisienne', cursive; */
  /* font-family: 'Playfair Display', serif; */

}



/* Scroll */

::-webkit-scrollbar {
width: 10px;
height: 10px;
}

::-webkit-scrollbar-track {
background: #fff;
border-radius: 10px;
}

::-webkit-scrollbar-thumb {
border-radius: 10px;
background:var(--color-2);  
}

::-webkit-scrollbar-thumb:hover {
background:var(--color-1);  
}

.custom-control-label::before {
  height: 20px;
  width: 20px;
}

.custom-control-label::after{
  height: 20px;
  width: 20px;
}

.custom-control-input:checked ~ .custom-control-label::before {
  color: var(--color-2);
  border-color: var(--color-2);
  background-color: var(--color-2);
  outline: none;
}
.custom-control-input:focus ~ .custom-control-label::before {
    box-shadow:none !important;
}

.addeventatc:hover{
  background: none;
}

.fancybox-bg{
  background-color: var(--color-2) !important;
}

.boton{
  background: var(--color-2);
  color: #fff;
  font-family: var(--fuente-2);
  font-weight:300;
  border-radius: 50px;
  line-height: 15px;
  font-size: 17px;
  padding: 18px 30px;
  text-decoration: none;

  -webkit-box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
  -moz-box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
  box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
  
  -webkit-transition: all 0.5s 0s ease;
  -moz-transition: all 0.5s 0s ease;
  -o-transition: all 0.5s 0s ease;
  transition: all 0.5s 0s ease;
}

.boton:hover{
  background:var(--color-1);
  text-decoration: none;
  color:#fff;
}

.title{
  width: 100%;
  display: inline-block;
  font-family: var(--fuente-1);
  color: var(--color-2);
  font-size: 60px;
  line-height:60px;
  margin-bottom: 0;
}

.subtitle{
  width: 100%;
  display: inline-block;
  font-family: var(--fuente-2);
  color: var(--color-1);
  font-size: 20px;
  font-weight: var(--grosor-fuente-regular);
}

ul{
  list-style: none;
  padding: 0;
}


a{
  -webkit-transition: all 0.5s 0s ease;
  -moz-transition: all 0.5s 0s ease;
  -o-transition: all 0.5s 0s ease;
  transition: all 0.5s 0s ease;
}


/* Fondo modales */
.modal-backdrop {
  background-color:var(--color-5);
  opacity:0.95 !important;
}

.modal-body{
  flex: inherit;
}


.modal.modal-transparent .modal-content{
  border: none;
  background-color: transparent;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}


.modal.modal-transparent .close{
  color: var(--color-1);
  font-size: 40px;
  text-shadow: none;
  opacity: 1;
  position: absolute;
  right: 35px;
  outline: none;
  padding: 0;
}

.modal.modal-transparent .modal-header, .modal .modal-transparent  .modal-footer{
  border: none;
  padding: 0;
}

.modal.modal-transparent .modal-header h3{
  color: var(--color-1);
  font-family: var(--fuente-2);
  font-weight:var(--grosor-fuente-regular);
  text-align: center;
  width: 100%;
}

.modal.modal-transparent .boton{
  padding: 15px 50px;
}



/* Cambio de idiomas / paises */

.flags-laguages{
  padding: 30px;
}

.flags-laguages li a{
  display: inline-block;
  width: 35px;
  height: 35px;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
  margin: 10px 8px;
  opacity: 0.75;
  border: 2px solid #ccc;
}

.flags-laguages li a:hover{
  opacity: 1;
}

.flags-laguages a.reset-lang{
  width: 100%;
  text-align: center;
  color: #fff;
  display: inline-block;
  font-size: 14px;
  margin-top: 30px;
}

.flags-laguages a.reset-lang:hover{
  text-decoration: underline;
}

.flags-laguages a.reset-lang img{
  width: 22px;
  height: auto;
  margin-right: 5px;
}



/* Loader */


.preloader-area {
  position: fixed;
  background: var(--color-5);
  z-index: 11000;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.preloader-area .loader{
  width: 130px;
}


span#error-form{
  color: red;
  font-size: 13px;
}


/* ---------- */


/* Portada */
section.portada{
  width: 100%;
  padding-bottom: 0;
  background-size: cover;
  color: #fff;
  position: relative;
}

section.portada .portada-picture {
  width: 55%;
  position: relative;
}

section.portada .portada-container {
  width: 45%;
  background:var(--color-5);
  padding-bottom: 60px;
  position: relative;
}

section.portada .portada-container .portada-container-2{
  width: 100%;
  max-width: 610px;
  background: var(--color-5);
  padding-bottom: 60px;
  position: relative;
}

section.portada .portada-container .row.d-flex {
  height: 810px;
  margin: 0;
}

section.portada .portada-picture::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(129, 148, 139, 0.4);
  z-index: 0;
  top: 0;
  left: 0;
}

section.portada .portada-picture::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url('../curva_portada_vertical.svg');
  background-repeat: no-repeat;
  background-position: top right;
  z-index: 0;
  top: 0;
  right: 0;
}

section.portada::after{
  background-image: url('../img_ondas01.svg');
  position: absolute;
  content: '';
  background-repeat: no-repeat;
  background-position: bottom center;
  height: 100%;
  width: 100%;
  bottom: -10%;
  z-index: 9;
}

section.portada .container .row:first-child{
  height: 100vh;
}

section.portada .content-portada{
  width: 100%;
  z-index: 999;
  position: relative;
}

section.portada .adorno {
  position: absolute;
  height: auto;
}

section.portada .adorno-1 {
  position: absolute;
  width: 100%;
  top: -245px;
  max-height: 420px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}
/* ... */

